[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "Encrypted backup system."
license = "MIT OR Apache-2.0"
name = "preserve"
readme = "README.md"
repository = "https://github.com/fpgaminer/preserve"
version = "0.1.0"

[dependencies]
clap = "2"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
rand = "^0.3"
rusqlite = "0.16.0"
rust-crypto = "^0.2"
rust-lzma = "0.4"
rustc-serialize = "^0.3"
tempdir = "^0.3"
time = "0.1.35"
url = "1.7"

[profile]

[profile.dev]
debug = true
opt-level = 2
