[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "Encrypted backup system."
license = "MIT OR Apache-2.0"
name = "preserve"
readme = "README.md"
repository = "https://github.com/fpgaminer/preserve"
version = "0.1.0"

[dependencies]
clap = "2"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
rand = "^0.3"
rusqlite = "0.16.0"
rust-crypto = "^0.2"
rust-lzma = "0.4"
tempfile = "3"
time = "0.1"
url = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
data-encoding = "2"

[profile]

[profile.dev]
debug = true
opt-level = 2
