[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "Encrypted backup system."
license = "MIT OR Apache-2.0"
name = "preserve"
readme = "README.md"
repository = "https://github.com/fpgaminer/preserve"
version = "0.2.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
libc = "0.2.62"
log = { version = "0.4.8", features = ["std"] }
rand = "0.7.0"
rusqlite = "0.20.0"
rust-crypto = "0.2.36"
rust-lzma = "0.4.0"
tempfile = "3.1.0"
time = "0.1.42"
url = "2.1.0"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
data-encoding = "2.1.2"

[profile]

[profile.dev]
debug = true
opt-level = 2
